fix height input type on safari

--- a/public/view/form/form.css
+++ b/public/view/form/form.css
@@ -22,6 +22,10 @@
     padding-left: 3px;
 }
 
+input[type='date'] {
+    height: 42px;
+}
+
 .formLabel .d-inline,
 .h3Label .d-inline {
     display: inline !important;
